--- a/.project
+++ b/.project
@@ -20,8 +20,15 @@
 	</buildSpec>
 	<natures>
 		<nature>org.eclipse.cdt.core.cnature</nature>
+		<nature>org.eclipse.cdt.core.ccnature</nature>
 		<nature>org.eclipse.cdt.managedbuilder.core.managedBuildNature</nature>
 		<nature>org.eclipse.cdt.managedbuilder.core.ScannerConfigNature</nature>
 		<nature>org.eclipse.cdt.core.ccnature</nature>
 	</natures>
+	<variableList>
+		<variable>
+			<name>ARMTOOLCHAIN</name>
+			<value>file:/Users/will/arm-toolchain</value>
+		</variable>
+	</variableList>
 </projectDescription>
